--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pdfjs-dist": "^3.4.120",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-pdf": "^9.2.1"
   },
